# betr

./: BetrConfig.cmake.in  CMakeLists.txt  CONVENTIONS.md  LICENSE  PKGBUILD  README.md
src/betr/: array.hpp
